--- a/style.css
+++ b/style.css
@@ -40,10 +40,15 @@ label {
 /* Boutons mouse hover */
 .table_etudiants button:hover {
     filter: opacity(.8);
+    cursor: pointer;
 }
 
 /* Bouton Supprimer */
 .button-delete {
     background-image: linear-gradient(120deg, #dd8888 0%, #ff002a 100%);
+    border: none;
+ }
+.button-update {
+    background-image: linear-gradient(120deg, #a4d68b 0%, #4CAF50 100%);
     border: none;
 }
